fix(docs): horizontal scroll bars for mobile docs

--- a/doc/_static/theme_overrides.css
+++ b/doc/_static/theme_overrides.css
@@ -1,5 +1,5 @@
 /* overriding tables */
-@media screen and (min-width: 767px) {
+@media screen {
     .wy-table-responsive table td {
         white-space: normal !important;
     }
